# Actix-Web-rs

./: .gitignore  Cargo.toml  Readme.md  bitbucket-pipelines.yml
src/: augment-file-present.html  augment-none.html  augment.html  drag-and-drop.html  index.html  main.rs  navbar.html  notfound.html  sparql.html
src/apidoc/: mod.rs  models.rs
src/models/: mod.rs
src/startup/: mod.rs
